--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 management.endpoint.gateway.enabled=true
 management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=prometheus,gateway
+management.endpoints.web.exposure.include=prometheus,gateway,metrics
 management.metrics.web.server.auto-time-requests=true
+
+faas.provider.base.url=http://localhost:8070
