feat(swarm): add constraints to scale func

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=8070
 
-provider.network.name=functions
+logging.level.com.siavash.faas.provider=debug
+
+provider.network.name=faas_functions
+
+provider.scale.min=1
+provider.scale.max=10
