feat(alert): handle api high/low invocation alerts

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -3,4 +3,6 @@ management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=prometheus,gateway,metrics
 management.metrics.web.server.auto-time-requests=true
 
-faas.provider.base.url=http://localhost:8070
+logging.level.com.siavash.faas.gateway=debug
+
+faas.provider.base.url=http://provider:8070
