refactor(alert): add config based provider scale min

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -6,3 +6,5 @@ management.metrics.web.server.auto-time-requests=true
 logging.level.com.siavash.faas.gateway=debug
 
 faas.provider.base.url=http://provider:8070
+
+faas.provider.scale.min=1
