feat(swarm): add func_ prefix to deployment

--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8070
 
 logging.level.com.siavash.faas.provider=debug
 
+provider.service.name.prefix=func_
+
 provider.network.name=faas_functions
 
 provider.scale.min=1
